# rsa

./: .gitignore  package-lock.json  package.json
client/: README.md  eslint.config.js  package.json  playwright.config.js
client/src/: App.vue  main.js
client/src/assets/styles/: main.css  styles.css
client/src/components/: FooterComponent.vue  HeaderComponent.vue  HelloWorld.vue  MainContent.vue  RSAForm.vue  SidebarComponent.vue
client/src/utils/: rsa.js
rsa/: decrypted.txt  hello  main.cpp  mykey.key  mykey.pub  readme.md  result.md  rsa  rsa8192  rsa_lib.cpp  rsa_lib.h  test_k256.cpp  test_k8192.cpp
server/: CMakeLists.txt  RSA_REST_API  http_server.cpp  http_server_v1.cpp  rsa_lib.cpp  rsa_lib.h
server/rsa/: index.js
